# trotters_int_trdaing

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  deep-research-report.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
configs/: alpha_vantage.toml  backtest.toml  bulk_historical.toml  eodhd.toml  eodhd_mean_reversion_broad_candidate_n10_ms003_rf10.toml  eodhd_mean_reversion_broad_candidate_n12_ms004_rf14.toml  eodhd_mean_reversion_broad_candidate_n6_ms006_rf7_bb2.toml  eodhd_mean_reversion_broad_candidate_n8_ms005_rf14_vt10.toml  eodhd_mean_reversion_broad_candidate_n8_ms005_rf21.toml  eodhd_momentum.toml  eodhd_momentum_aggressive.toml  eodhd_momentum_broad.toml  eodhd_momentum_broad_candidate_beta_bucket_n5_ms002_rf42.toml  eodhd_momentum_broad_candidate_beta_defensive_n4_ms002_rf63.toml  eodhd_momentum_broad_candidate_beta_n4_ms002_rf63.toml  eodhd_momentum_broad_candidate_drawdown_n4_ms002_rf63.toml  eodhd_momentum_broad_candidate_drawdown_patience_n5_ms002_rf63.toml  eodhd_momentum_broad_candidate_drawdown_sector_n6_ms002_rf42.toml  eodhd_momentum_broad_candidate_refine_n4_ms002_rf63.toml  eodhd_momentum_broad_candidate_risk_gross65_deploy20_n8_w09_cb12.toml  eodhd_momentum_broad_candidate_risk_sector_sec3.toml  eodhd_momentum_candidate.toml  eodhd_momentum_candidate_refine_n3_ms002_rf63.toml  eodhd_momentum_candidate_refine_n3_ms003_rf63.toml  eodhd_momentum_candidate_refine_n4_ms003_rf63.toml  eodhd_momentum_core.toml  eodhd_momentum_defensive.toml  eodhd_momentum_total_return.toml  (+3 more)
context/: 00_project_overview.md  README.md  (+28 more)
(+332 files in other folders)
